--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                     <button id="battle-attack-btn" class="battle-btn">Attack!</button>
                     <button id="battle-tame-btn" class="battle-btn" style="display: none;">Tame!</button>
                     <button id="battle-defense-btn" class="battle-btn" style="display: none;">Defense!</button>
-                    <button id="battle-triple-damage-btn" class="battle-btn" style="display: none;">Triple Damage!</button>
+                    <button id="battle-triple-damage-btn" class="battle-btn" style="display: none;">2x Damage!</button>
                 </div>
                 <div class="battle-items">
                     <h4>Use Items:</h4>
