--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <div class="game-container">
         <div class="game-header">
             <button id="new-game-btn" class="new-game-button">Start a New Game</button>
+            <button id="data-collection-btn" class="data-collection-button" onclick="game.showDataCollectionModal()">Data Collection Mode</button>
             <h1>Hunter & Apprentice</h1>
+            <div id="data-collection-progress" class="data-collection-progress" style="display: none;"></div>
         </div>
         
         <!-- Game Log Section -->
@@ -304,6 +306,33 @@
                     <p>Please remove items to fit within your capacity:</p>
                 </div>
                 <div id="capacity-items" class="capacity-items"></div>
+            </div>
+        </div>
+        
+        <!-- Data Collection Modal -->
+        <div id="data-collection-modal" class="modal" style="display: none;">
+            <div class="modal-content">
+                <h3>Data Collection Mode</h3>
+                <div class="data-collection-settings">
+                    <div class="setting-group">
+                        <label for="num-games">Number of Games:</label>
+                        <input type="number" id="num-games" min="1" max="1000" value="10">
+                    </div>
+                    <div class="setting-group">
+                        <label for="player-count-select">Player Count:</label>
+                        <select id="player-count-select">
+                            <option value="2">2 Players</option>
+                            <option value="3">3 Players</option>
+                            <option value="4">4 Players</option>
+                            <option value="5">5 Players</option>
+                        </select>
+                    </div>
+                    <div class="button-group">
+                        <button class="start-collection-btn" onclick="game.startDataCollection()">Start Collection</button>
+                        <button class="cancel-btn" onclick="game.hideDataCollectionModal()">Cancel</button>
+                    </div>
+                    <div id="data-collection-status" class="data-collection-status"></div>
+                </div>
             </div>
         </div>
     </div>
