--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
             </div>
         </div>
         
+        <!-- Main Menu Screen -->
+        <div id="main-menu" class="main-menu" style="display: none;">
+            <div class="menu-content">
+                <h1 class="game-title">Hunter & Apprentice</h1>
+                <div class="menu-buttons">
+                    <button class="menu-button local-play-btn" onclick="game.showLocalPlay()">
+                        <span class="button-icon">🎮</span>
+                        <span>Local Play</span>
+                    </button>
+                    <button class="menu-button online-play-btn" onclick="game.showOnlinePlay()" disabled>
+                        <span class="button-icon">🌐</span>
+                        <span>Online Play</span>
+                        <span class="coming-soon">Coming Soon</span>
+                    </button>
+                </div>
+            </div>
+        </div>
+        
         <!-- Player Count Selection Screen -->
         <div id="player-count-selection" class="player-count-selection" style="display: none;">
             <div class="selection-content">
