add location icon

--- a/index.html
+++ b/index.html
@@ -94,37 +94,37 @@
         <!-- Game Board -->
         <div class="game-board">
             <div class="location" data-location="1">
-                <h3>Work Site</h3>
+                <h3><img src="work_site.png" class="location-icon" alt="Work Site"> Work Site</h3>
                 <div class="reward-info">$6/4</div>
                 <div class="token-slots"></div>
             </div>
             <div class="location" data-location="2">
-                <h3>Bar</h3>
+                <h3><img src="bar.png" class="location-icon" alt="Bar"> Bar</h3>
                 <div class="reward-info">Beer 6/4</div>
                 <div class="token-slots"></div>
             </div>
             <div class="location" data-location="3">
-                <h3>Station</h3>
+                <h3><img src="station.png" class="location-icon" alt="Station"> Station</h3>
                 <div class="reward-info">Wild Card</div>
                 <div class="token-slots"></div>
             </div>
             <div class="location" data-location="4">
-                <h3>Hospital</h3>
+                <h3><img src="hospital.png" class="location-icon" alt="Hospital"> Hospital</h3>
                 <div class="reward-info">Blood 4/2</div>
                 <div class="token-slots"></div>
             </div>
             <div class="location" data-location="5">
-                <h3>Dojo</h3>
+                <h3><img src="dojo.png" class="location-icon" alt="Dojo"> Dojo</h3>
                 <div class="reward-info">EXP 4/2</div>
                 <div class="token-slots"></div>
             </div>
             <div class="location" data-location="6">
-                <h3>Plaza</h3>
+                <h3><img src="plaza.png" class="location-icon" alt="Plaza"> Plaza</h3>
                 <div class="reward-info">Score 4/2</div>
                 <div class="token-slots"></div>
             </div>
             <div class="location" data-location="7">
-                <h3>Forest</h3>
+                <h3><img src="forest.png" class="location-icon" alt="Forest"> Forest</h3>
                 <div class="reward-info">Monster Hunt</div>
                 <div class="token-slots"></div>
             </div>
