simutaneous mode when playing solo.

--- a/index.html
+++ b/index.html
@@ -138,7 +138,12 @@
             <div class="current-player">
                 <h2>Current Player: <span id="current-player-name">Player 1</span></h2>
             </div>
-            
+
+            <!-- Player Status Indicators -->
+            <div class="player-status-panel" id="player-status-panel" style="display: none;">
+                <!-- Player status indicators will be dynamically generated here -->
+            </div>
+
             <!-- Card Selection Area -->
             <div class="card-selection">
                 <div class="token-selection">
