collapse player board

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
         </div>
         
         <!-- Player Boards -->
+        <div class="player-boards-controls">
+            <button id="toggle-boards-btn" class="toggle-boards-btn" onclick="game.toggleAllPlayerBoards()" style="display: none;">Collapse All Boards</button>
+        </div>
         <div class="player-boards" id="player-boards-container">
             <!-- Player boards will be generated dynamically -->
         </div>
