1. change the name 2. change the collapsed player board arrangement 3. fix x2 button for knife

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hunter & Apprentice Board Game</title>
+    <title>Rock, Paper, Hunter Board Game</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -18,14 +18,14 @@
                 <h3>Game Log</h3>
             </div>
             <div id="game-log" class="game-log">
-                <div class="log-entry">Welcome to Hunter & Apprentice!</div>
+                <div class="log-entry">Welcome to Rock, Paper, Hunter!</div>
             </div>
         </div>
         
         <!-- Main Menu Screen -->
         <div id="main-menu" class="main-menu" style="display: none;">
             <div class="menu-content">
-                <h1 class="game-title">Hunter & Apprentice</h1>
+                <h1 class="game-title">Rock, Paper, Hunter</h1>
                 <button class="menu-button rulebook-btn" onclick="game.showRulebook()">
                     <span class="button-icon">📖</span>
                 </button>
