--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
             <div class="main-left-column">
                 <!-- Player Boards -->
                 <div class="player-boards-controls">
-            <button id="toggle-boards-btn" class="toggle-boards-btn" onclick="game.toggleAllPlayerBoards()" style="display: none;">Collapse All Boards</button>
+            <button id="toggle-boards-btn" class="toggle-boards-btn" onclick="game.toggleAllPlayerBoards()" style="display: none;">Collapse</button>
         </div>
         <div class="player-boards" id="player-boards-container">
             <!-- Player boards will be generated dynamically -->
