add weapon images

--- a/index.html
+++ b/index.html
@@ -162,11 +162,11 @@
             <!-- Card Selection Area -->
             <div class="card-selection">
                 <div class="token-selection">
-                    <h3>Select Hunter Location</h3>
+                    <h3>Hunter Location</h3>
                     <div class="hunter-cards cards-container" id="hunter-cards"></div>
                 </div>
                 <div class="token-selection">
-                    <h3>Select Apprentice Location</h3>
+                    <h3>Apprentice Location</h3>
                     <div class="apprentice-cards cards-container" id="apprentice-cards"></div>
                 </div>
             </div>
