1. update rulebook 2. over capacity sign update

--- a/Rules_EN.htm
+++ b/Rules_EN.htm
@@ -1,31 +1,25 @@
-<!DOCTYPE html>
 <html>
 
 <head>
-<meta http-equiv=Content-Type content="text/html; charset=utf-8">
+<meta http-equiv=Content-Type content="text/html; charset=big5">
 <meta name=Generator content="Microsoft Word 15 (filtered)">
 <style>
 <!--
  /* Font Definitions */
  @font-face
 	{font-family:Wingdings;
-	panose-1:5 0 0 0 0 0 0 0 0 0;
-	src:local('Wingdings');}
+	panose-1:5 0 0 0 0 0 0 0 0 0;}
 @font-face
-	{font-family:ï¿½sï¿½Ó©ï¿½ï¿½ï¿½;
-	panose-1:2 2 5 0 0 0 0 0 0 0;
-	src:local('ï¿½sï¿½Ó©ï¿½ï¿½ï¿½');}
+	{font-family:·s²Ó©úÅé;
+	panose-1:2 2 5 0 0 0 0 0 0 0;}
 @font-face
 	{font-family:"Cambria Math";
-	panose-1:2 4 5 3 5 4 6 3 2 4;
-	src:local('Cambria Math');}
+	panose-1:2 4 5 3 5 4 6 3 2 4;}
 @font-face
-	{font-family:Aptos;
-	src:local('Aptos');}
+	{font-family:Aptos;}
 @font-face
-	{font-family:"\@ï¿½sï¿½Ó©ï¿½ï¿½ï¿½";
-	panose-1:2 1 6 1 0 1 1 1 1 1;
-	src:local('\@ï¿½sï¿½Ó©ï¿½ï¿½ï¿½');}
+	{font-family:"\@·s²Ó©úÅé";
+	panose-1:2 1 6 1 0 1 1 1 1 1;}
  /* Style Definitions */
  p.MsoNormal, li.MsoNormal, div.MsoNormal
 	{margin-top:0cm;
@@ -57,11 +51,12 @@ ul
 
 </head>
 
-<body lang=ZH-TW style='word-wrap:break-word'>
+<body lang=ZH-TW style='word-wrap:break-word;text-justify-trim:punctuation'>
 
-<div class=WordSection1>
+<div class=WordSection1 style='layout-grid:18.0pt'>
 
-<p class=MsoNormal><b><span lang=EN-US>Background</span></b></p>
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>Background</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>Players take on the role of skilled
 hunters, each accompanied by their top apprentice, arriving in a town in
@@ -71,14 +66,16 @@ flock to the town, they're not just there to help; they're also seeking fame
 and recognition. In this cutthroat environment, who will earn the public's
 acclaim?</span></p>
 
-<p class=MsoNormal><b><span lang=EN-US>Objective</span></b></p>
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>Objective</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>The player with the highest score wins.</span></p>
 
 <p class=MsoNormal><span lang=EN-US>Game End Condition: The game ends at the
 conclusion of the round in which any player achieves a score of 50 or more.</span></p>
 
-<p class=MsoNormal><b><span lang=EN-US>Rules</span></b></p>
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>Rules</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>The game is played over several rounds
 until the game end condition is triggered.</span></p>
@@ -92,7 +89,10 @@ until the game end condition is triggered.</span></p>
  <li class=MsoNormal><span lang=EN-US>Combat</span></li>
 </ol>
 
-<p class=MsoNormal><span lang=EN-US>1. Location Selection</span></p>
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>1. Location Selection</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>All players simultaneously choose a
 location for their Hunter and Apprentice to visit. The number of available locations
@@ -107,7 +107,7 @@ represents the player's prediction of where others want to go.</span></b></p>
 choose the forest, the apprentice can deal 1 point of damage to the monster. In
 other situations, the apprentice going to the forest provides no benefits.</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=554 height=193 id="ï¿½Ï¤ï¿½ 1"
+<p class=MsoNormal><span lang=EN-US><img width=367 height=598
 src="Rules_EN.files/image001.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>Different locations offer various benefits.
@@ -130,7 +130,10 @@ src="Rules_EN.files/image001.png"></span></p>
      Battle monsters to gain points and resources.</span></li>
 </ul>
 
-<p class=MsoNormal><span lang=EN-US>2. Popularity Rewards</span></p>
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>2. Popularity Rewards</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>If a player's Hunter is in a location alone
 (without any other Hunters or Apprentices), they receive an extra Popularity
@@ -142,39 +145,51 @@ same height, and the player immediately receives the points. <b>This does not
 apply to the Forest location</b>; <b>a Hunter in the Forest does not gain any
 popularity rewards.</b></span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=160 height=285 id="ï¿½Ï¤ï¿½ 9"
+<p class=MsoNormal><span lang=EN-US><img width=153 height=223
 src="Rules_EN.files/image002.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>If a player's Hunter is in a location with
 others, their resource token will move down, and they will still receive the
 corresponding resources.</span></p>
 
-<p class=MsoNormal><span lang=EN-US>3. Resource Usage</span></p>
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>3. Resource Usage</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>In this phase, all players can use their
 resources.</span></p>
 
 <ul style='margin-top:0cm' type=disc>
  <li class=MsoNormal><b><span lang=EN-US>Money:</span></b><span lang=EN-US> Buy
-     items.</span></li>
+     items. Every item has a specific size. If the sum of all item sizes
+     exceeds the capacity limit, the player must decide whether to discard or use
+     the overflow items at the end of this phase.</span></li>
+</ul>
+
+<p class=MsoNormal style='margin-left:18.0pt'><span lang=EN-US><img width=381
+height=448 src="Rules_EN.files/image003.png"></span></p>
+
+<ul style='margin-top:0cm' type=disc>
  <li class=MsoNormal><b><span lang=EN-US>Beer:</span></b><span lang=EN-US>
      Restore 1 EP or increase max EP.</span></li>
  <li class=MsoNormal><b><span lang=EN-US>Blood Bag:</span></b><span lang=EN-US>
      Restore 1 HP or increase max HP.</span></li>
+</ul>
+
+<p class=MsoNormal style='margin-left:18.0pt'><span lang=EN-US><img width=149
+height=222 src="Rules_EN.files/image004.png"></span></p>
+
+<ul style='margin-top:0cm' type=disc>
  <li class=MsoNormal><b><span lang=EN-US>EXP:</span></b><span lang=EN-US>
      Increase Attack or Defense.</span></li>
 </ul>
 
-<p class=MsoNormal><span lang=EN-US><img width=553 height=163 id="ï¿½Ï¤ï¿½ 3"
-src="Rules_EN.files/image003.png"></span></p>
+<p class=MsoNormal style='text-indent:18.0pt'><span lang=EN-US><img width=201
+height=109 id="¹Ï¤ù 4" src="Rules_EN.files/image005.png"></span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=154 height=206 id="ï¿½Ï¤ï¿½ 2"
-src="Rules_EN.files/image004.png"></span></p>
+<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=201 height=109 id="ï¿½Ï¤ï¿½ 4"
-src="Rules_EN.files/image005.png"></span></p>
-
-<p class=MsoNormal><span lang=EN-US>4. Combat</span></p>
+<p class=MsoNormal><b><span lang=EN-US style='font-size:14.0pt;line-height:
+115%'>4. Combat</span></b></p>
 
 <p class=MsoNormal><span lang=EN-US>This phase is only executed if there are
 Hunters in the Forest. Players in the Forest choose the monster level they want
@@ -202,7 +217,7 @@ be paid.</span></p>
      lang=EN-US> 4 EP</span></li>
 </ul>
 
-<p class=MsoNormal><span lang=EN-US><img width=486 height=331 id="ï¿½Ï¤ï¿½ 6"
+<p class=MsoNormal><span lang=EN-US><img width=486 height=331 id="¹Ï¤ù 6"
 src="Rules_EN.files/image006.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>Next, the player decides which specific
@@ -210,7 +225,7 @@ monster to fight. A pop-up window displays the monster's HP, attack power,
 rewards, and special effects. If the player is not satisfied, they can pay 1 EP
 to view the next monster.</span></p>
 
-<p class=MsoNormal><span lang=EN-US><img width=471 height=435 id="ï¿½Ï¤ï¿½ 7"
+<p class=MsoNormal><span lang=EN-US><img width=471 height=435 id="¹Ï¤ù 7"
 src="Rules_EN.files/image007.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>Once decided, the battle begins.</span></p>
@@ -227,14 +242,18 @@ src="Rules_EN.files/image007.png"></span></p>
      to capture it and make it their pet.</span></li>
 </ol>
 
-<p class=MsoNormal><span lang=EN-US><img width=554 height=475 id="ï¿½Ï¤ï¿½ 8"
+<p class=MsoNormal><span lang=EN-US><img width=554 height=475 id="¹Ï¤ù 8"
 src="Rules_EN.files/image008.png"></span></p>
 
 <p class=MsoNormal><span lang=EN-US>Each time a player defeats a monster, they
 gain points and resources and advance on the Weapon Power track. Advancing on
 the track unlocks new skills.</span></p>
 
-<p class=MsoNormal><span lang=EN-US>&nbsp;</span></p>
+<p class=MsoNormal><span lang=EN-US><img width=209 height=108 id="¹Ï¤ù 1"
+src="Rules_EN.files/image009.png"></span></p>
+
+<p class=MsoNormal><span lang=EN-US>Gaining 2 weapon powers unlocks level 2
+power; Gaining 6 weapon powers unlocks level 3 power.</span></p>
 
 </div>
 
