--- a/index.html
+++ b/index.html
@@ -484,6 +484,22 @@
         </div>
     </div>
 
+    <!-- Data Collection Running Overlay -->
+    <div id="data-collection-overlay" class="data-collection-overlay" style="display: none;">
+        <div class="data-collection-overlay-content">
+            <h2>Data Collection Running</h2>
+            <div id="dc-overlay-progress-text" class="dc-overlay-progress-text">Running game 1 of 10...</div>
+            <div class="dc-overlay-progress-bar-container">
+                <div id="dc-overlay-progress-bar" class="dc-overlay-progress-bar" style="width: 0%"></div>
+            </div>
+            <button class="dc-overlay-stop-btn" onclick="game.stopDataCollection()">Stop Collection</button>
+            <div id="dc-overlay-results" class="dc-overlay-results" style="display: none;">
+                <div id="dc-overlay-results-content"></div>
+                <button class="dc-overlay-close-btn" onclick="game.closeDataCollectionOverlay()">Close</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Game Stats Display -->
     <div id="game-stats-overlay" class="game-stats-overlay" style="display: none;">
         <div class="game-stats-container">
